# Imgr

./: .gitignore  CLAUDE.md  README.md
backend/: CLAUDE.md  README.md  conftest.py  pyproject.toml
backend/api/: consts.py  main.py  mask_generation_service.py  mask_refinement_service.py  routes.py  sam_service.py
backend/models/: README.md
backend/tests/: test_api.py
frontend/: .prettierignore  .prettierrc.json  CLAUDE.md  eslint.config.js  package.json  tailwind.config.js
frontend/src/: App.svelte
